Bug 335358 - Desktop Wallpaper Settings appears empty / shows empty space
Summary: Desktop Wallpaper Settings appears empty / shows empty space
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-26 09:38 UTC by Bart Otten
Modified: 2014-05-29 11:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of failing dialog (38.29 KB, image/jpeg)
2014-05-26 09:39 UTC, Bart Otten
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bart Otten 2014-05-26 09:38:48 UTC
When opening Wallpaper Settings, the dialog opens with a large empty area. The empty space can be selected as if there is an wallpaper perview shown. After scrolling, it showed one wallpaper after all (see screenshot). 

I guess this is caused by de-installing the wallpaper pack. which is never corrected in de selection dialog.


Reproducible: Didn't try

Steps to Reproduce:
1. Install a wallpaper pack using a packagemanager of your distro
2. Open Wallpaper Settings
3. Close Wallpaper Settings
4. Uninstall wallpaper pack
5. Reboot (just to be sure)
6. Open Wallpaper Settings
Actual Results:  
# See screenshot

Expected Results:  
# Only a few wallpapers shown in just enough space.
Comment 1 Bart Otten 2014-05-26 09:39:55 UTC
Created attachment 86824 [details]
Screenshot of failing dialog

Screenshot showing the empty 'selection' boxes and one still available wallpaper
Comment 2 Bhushan Shah 2014-05-28 11:08:20 UTC
I can confirm
Comment 3 Marco Martin 2014-05-29 11:08:10 UTC
Git commit 8d2f9d087fa1d337a4702727728abd29f7c1d5f1 by Marco Martin.
Committed on 29/05/2014 at 11:06.
Pushed by mart into branch 'master'.

fix wallpaper package

one always has to check if a package is valid before accessing it

M  +4    -2    wallpapers/image/wallpaperpackage.cpp

http://commits.kde.org/plasma-workspace/8d2f9d087fa1d337a4702727728abd29f7c1d5f1