fix wallpaper package

one always has to check if a package is valid before accessing it
BUG:335358