wallpapers/image/wallpaperpackage.cpp
@@ -114,8 +114,10 @@ QSize WallpaperPackage::resSize(const QString &str) const
 
 void WallpaperPackage::findBestPaper(Plasma::Package *package)
 {
-    //FIXME
-    //qWarning()<<"Why this affects entryList?"<<package->isValid();
+    if (!package->isValid()) {
+        return;
+    }
+
     QStringList images = package->entryList("images");
     if (images.empty()) {
         return;
